# Nanna

./: .gitignore  AGENTS.md  Cargo.toml  GPU_TODO_COMPLETION.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SOUL.md  STATUS.md  STOP_BUTTON_IMPLEMENTATION.md  STOP_BUTTON_PATCH.md  THRESHOLD_ANALYSIS.md  USER.md  _g.py  _grep.py  _impl.py  _outline.txt  _r.py  _r2.py  _r3.py  _r4.py  _r5.py  _read.js  _read.py  _read_lines.py  _scan.py  _scan2.py  _scan_rm.py  _scan_roadmap.py  _search.py  _tmp_h.py  _tmp_r.py  _tmp_read.py  _tmp_read_roadmap.py  add_cancellation.py  add_import.js  add_logs.js  add_logs_nav.js  (+52 more)
crates/nanna-agent/: Cargo.toml
crates/nanna-agent/src/: chunker.rs  compressor.rs  context.rs  cost.rs  harness.rs  image_util.rs  lib.rs  loop_runner.rs  mcp.rs  model_stats.rs  multi.rs  prompts.rs  registry.rs  summarizer.rs  supervisor.rs  tool_stats.rs
crates/nanna-browser/: Cargo.toml
crates/nanna-browser/src/: cdp.rs  lib.rs  playwright.rs
crates/nanna-channels/: Cargo.toml
crates/nanna-channels/src/: discord.rs  format.rs  lib.rs  queue.rs  signal.rs  slack.rs  status.rs  telegram.rs  whatsapp.rs
crates/nanna-channels/src/listeners/: circuit_breaker.rs  discord.rs  mod.rs  signal.rs  slack.rs  telegram.rs  whatsapp.rs
crates/nanna-client/: Cargo.toml
crates/nanna-client/src/: connection.rs  lib.rs
crates/nanna-client/tests/: e2e_daemon.rs
crates/nanna-config/: Cargo.toml
crates/nanna-config/src/: bind.rs  credentials.rs  lib.rs
crates/nanna-core/: Cargo.toml
crates/nanna-core/src/: cron.rs  dreaming.rs  lib.rs  log_buffer.rs  scheduler.rs  workspace.rs
crates/nanna-daemon/: Cargo.toml
crates/nanna-daemon/src/: activity.rs  agent_service.rs  channels.rs  control.rs  dream_summarizer.rs  embedding_router.rs  health.rs  ipc.rs  lib.rs  llm_router.rs  log_buffer.rs  log_file.rs  main.rs  memory_adapter.rs  memory_persistence.rs  persistence.rs  protocol.rs  server.rs  service.rs  session.rs  tasks.rs  user_tools.rs  webhook.rs  windows_service.rs
crates/nanna-daemon/src/control/: channel.rs  chat.rs  config.rs  memory.rs  mod.rs  scheduler.rs  session.rs  system.rs  task.rs  tests.rs  tool.rs  workspace.rs
crates/nanna-daemon/tests/: corrupt_store_recovery.rs  live_long_horizon.rs
crates/nanna-gpu/: Cargo.toml
crates/nanna-gpu/benches/: gpu_vs_simd.rs  gpu_vs_simd_extended.rs  gpu_vs_simd_quick.rs  threshold_benchmark.rs
crates/nanna-gpu/src/: batch_processor.rs  lib.rs  memory_manager.rs
crates/nanna-llm/: Cargo.toml
crates/nanna-llm/src/: heal.rs  lib.rs  oauth.rs
crates/nanna-mcp/: Cargo.toml
crates/nanna-mcp/src/: adapter.rs  client.rs  lib.rs  protocol.rs  schema_guard.rs  server.rs  transport.rs
crates/nanna-memory/: Cargo.toml
crates/nanna-memory/src/: activity.rs  consolidation.rs  dreaming.rs  fsrs.rs  lib.rs  retention.rs  service.rs
crates/nanna-scripting/: Cargo.toml
crates/nanna-scripting/src/: boa_impl.rs  bridge.rs  deno_impl.rs  engine.rs  lib.rs  python.rs  tool.rs
crates/nanna-scripting/tests/: default_skills_params.rs  discover_tools_skill.rs  edit_file_skill.rs  file_buffer_skill.rs  write_file_skill.rs
crates/nanna-server/: Cargo.toml
crates/nanna-server/src/: lib.rs  routes.rs  state.rs
crates/nanna-server/src/webhooks/: discord.rs  generic.rs  mod.rs  signal.rs  slack.rs  telegram.rs
crates/nanna-storage/: Cargo.toml
crates/nanna-storage/src/: lib.rs  migrations.rs  models.rs  recovery.rs  repositories.rs  task_filter.rs  tasks.rs
crates/nanna-storage/tests/: dep_guard.rs  vector_functions.rs
crates/nanna-tools/: Cargo.toml  build.rs
crates/nanna-tools/default-skills/analyze_image/: tool.ts
crates/nanna-tools/default-skills/browser_action/: tool.ts
crates/nanna-tools/default-skills/browser_evaluate/: tool.ts
crates/nanna-tools/default-skills/browser_extract/: tool.ts
crates/nanna-tools/default-skills/browser_screenshot/: tool.ts
crates/nanna-tools/default-skills/cancel_reminder/: tool.ts
crates/nanna-tools/default-skills/code_outline/: tool.ts
crates/nanna-tools/default-skills/code_search/: tool.ts
crates/nanna-tools/default-skills/create_tool/: tool.ts
crates/nanna-tools/default-skills/describe_image/: tool.ts
crates/nanna-tools/default-skills/discover_tools/: tool.ts
crates/nanna-tools/default-skills/echo/: tool.ts
crates/nanna-tools/default-skills/edit_file/: permissions.json  tool.ts
crates/nanna-tools/default-skills/exec/: tool.ts
crates/nanna-tools/default-skills/explore/: tool.ts
crates/nanna-tools/default-skills/file_buffer/: tool.ts
crates/nanna-tools/default-skills/list_dir/: tool.ts
crates/nanna-tools/default-skills/list_reminders/: tool.ts
crates/nanna-tools/default-skills/list_user_tools/: tool.ts
crates/nanna-tools/default-skills/ocr/: tool.ts
crates/nanna-tools/default-skills/project_structure/: tool.ts
crates/nanna-tools/default-skills/python/: permissions.json  tool.ts
crates/nanna-tools/default-skills/read_file/: permissions.json  tool.ts
crates/nanna-tools/default-skills/read_pdf/: tool.ts
crates/nanna-tools/default-skills/recall/: tool.ts
crates/nanna-tools/default-skills/recall_messages/: permissions.json  tool.ts
crates/nanna-tools/src/: lib.rs  output.rs  policy.rs  registry.rs  schema.rs  search.rs
crates/nanna-workspace/: Cargo.toml
crates/nanna-workspace/src/: discovery.rs  files.rs  lib.rs  manager.rs  templates.rs
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/binaries/: .gitkeep
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/memory/: justin.txt
gui/src-tauri/planning/: 00-roadmap.md  01-chat-agent-loop.md  02-cognitive-memory.md  03-context-management.md  04-llm-providers.md  05-tool-system.md  06-workspaces.md  07-daemon-backend.md  08-scheduler-cron.md  09-channels.md  10-agent-registry.md  GPU_OPTIMIZATION_PLAN.md
gui/src-tauri/src/: _patch.py  agents.rs  backend.rs  daemon_client.rs  daemon_manager.rs  embedded.rs  lib.rs  logs.rs  main.rs  state.rs  tool_authoring.rs
gui/src-tauri/src/llm/: mod.rs  (+3 more)
(+258 files in other folders)
