[package]
name = "nanna"
version = "0.2.1"
edition = "2024"
description = "High-performance AI assistant - patron deity of your digital realm"
repository = "https://github.com/physics515/Nanna"
license = "MIT"

[[bin]]
name = "nanna"
path = "src/main.rs"

[dependencies]
nanna-core = { path = "crates/nanna-core" }
nanna-server = { path = "crates/nanna-server" }
nanna-agent = { path = "crates/nanna-agent" }
nanna-tools = { path = "crates/nanna-tools", features = ["scripting", "python"] }
nanna-config = { path = "crates/nanna-config" }
nanna-storage = { path = "crates/nanna-storage" }
nanna-llm = { path = "crates/nanna-llm" }
nanna-daemon = { path = "crates/nanna-daemon" }
nanna-client = { path = "crates/nanna-client" }
nanna-mcp = { path = "crates/nanna-mcp" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
uuid.workspace = true
toml.workspace = true
serde_json.workspace = true
dialoguer = { version = "0.12", features = ["password"] }
console = "0.16"
chrono.workspace = true

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[workspace]
resolver = "2"
members = [
    "crates/nanna-core",
    "crates/nanna-simd",
    "crates/nanna-gpu",
    "crates/nanna-llm",
    "crates/nanna-channels",
    "crates/nanna-memory",
    "crates/nanna-server",
    "crates/nanna-tools",
    "crates/nanna-agent",
    "crates/nanna-config",
    "crates/nanna-storage",
    "crates/nanna-browser",
    "crates/nanna-mcp",
    "crates/nanna-scripting",
    "crates/nanna-workspace",
    "crates/nanna-daemon",
    "crates/nanna-client",
    "gui/src-tauri",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/physics515/Nanna"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.53", features = ["full"] }

# GPU compute
wgpu = "30"

# SIMD - using portable_simd (nightly) or wide for stable
wide = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client. reqwest 0.13 notes: the default TLS flipped to rustls+aws-lc,
# whose C/asm build (cmake+nasm) violates "prefer pure-Rust, no-C" — so default
# features are off and `native-tls` (Windows SChannel / OS TLS, the 0.12
# behavior) is selected explicitly. `query`/`form` became opt-in features;
# `charset`/`http2`/`system-proxy` re-add the remaining defaults.
reqwest = { version = "0.13", default-features = false, features = [
    "native-tls",
    "charset",
    "http2",
    "system-proxy",
    "json",
    "stream",
    "multipart",
    "query",
    "form",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Async channels
flume = "0.12"

# Memory/embeddings
half = "2.7"  # f16 support

# Web server
axum = { version = "0.8", features = ["macros"] }

# Utilities
uuid = { version = "1.24", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Config
toml = "1.1"
directories = "6"

# Snowball (porter2) stemming for tool lexical search (pure Rust, no deps)
rust-stemmers = "1"

# GUI (Tauri v2)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release.build-override]
opt-level = 3
