[package]
name = "nanna-agent"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
futures = "0.3"

nanna-llm = { path = "../nanna-llm" }
nanna-tools = { path = "../nanna-tools" }
nanna-memory = { path = "../nanna-memory" }
