[package]
name = "nanna-agent"
version.workspace = true
edition.workspace = true

[features]
default = ["mcp"]
mcp = ["nanna-mcp"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.23"
regex = "1"
nanna-storage = { path = "../nanna-storage" }

nanna-llm = { path = "../nanna-llm" }
nanna-tools = { path = "../nanna-tools" }
nanna-memory = { path = "../nanna-memory" }
nanna-workspace = { path = "../nanna-workspace" }
nanna-mcp = { path = "../nanna-mcp", optional = true }

[dev-dependencies]
tempfile = "3"
