[package]
name = "nanna-browser"
version.workspace = true
edition.workspace = true

[features]
default = ["cdp"]
cdp = ["chromiumoxide"]
# Playwright requires more work to integrate - API is different
# playwright = ["playwright-rs"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures = "0.3"

# Browser automation via CDP (optional)
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], optional = true }

# Playwright for multi-browser support - TODO: API integration needed
# playwright-rs = { version = "0.8", optional = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64-simd = "0.8"
