[package]
name = "nanna-browser"
version.workspace = true
edition.workspace = true

[features]
default = ["cdp"]
cdp = ["chromiumoxide"]
playwright = ["playwright-rs"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures = "0.3"

# Browser automation via CDP (optional)
chromiumoxide = { version = "0.9", features = ["tokio-runtime"], optional = true }

# Playwright for multi-browser support (Firefox, WebKit, Chromium)
playwright-rs = { version = "0.14", optional = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64-simd = "0.8"
