[package]
name = "nanna-channels"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
flume.workspace = true
async-trait = "0.1"
bitflags = "2"
reqwest = { version = "0.12", features = ["json"] }
