[package]
name = "nanna-channels"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
flume.workspace = true
async-trait = "0.1"
bitflags = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
# WebSocket listeners
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
