[package]
name = "nanna-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
directories.workspace = true
chrono.workspace = true
reqwest.workspace = true

# Cross-platform credential storage
keyring = "3"

[dev-dependencies]
tempfile = "3"
