[package]
name = "nanna-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
directories.workspace = true
chrono.workspace = true
reqwest.workspace = true

# Cross-platform credential storage
keyring = { version = "4", features = ["apple-native-keyring-store"] }

[dev-dependencies]
tempfile = "3"
