[package]
name = "nanna-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Nanna daemon - headless background service with IPC server"

[[bin]]
name = "nanna-daemon"
path = "src/main.rs"

[lib]
name = "nanna_daemon"
path = "src/lib.rs"

[dependencies]
# Internal crates
nanna-core = { path = "../nanna-core" }
nanna-agent = { path = "../nanna-agent" }
nanna-tools = { path = "../nanna-tools" }
nanna-channels = { path = "../nanna-channels" }
nanna-config = { path = "../nanna-config" }
nanna-storage = { path = "../nanna-storage" }
nanna-llm = { path = "../nanna-llm" }
nanna-memory = { path = "../nanna-memory" }
nanna-mcp = { path = "../nanna-mcp" }
nanna-scripting = { path = "../nanna-scripting" }

# Workspace deps
tokio.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
axum.workspace = true

# IPC / WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# HTTP server for health endpoint
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Platform services
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"
