[package]
name = "nanna-gpu"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
half.workspace = true
bytemuck = { version = "1.21", features = ["derive"] }
futures = "0.3"

[[bench]]
name = "gpu_vs_simd"
harness = false

[[bench]]
name = "gpu_vs_simd_quick"
harness = false

[[bench]]
name = "gpu_vs_simd_extended"
harness = false

[[bench]]
name = "threshold_benchmark"
harness = false

[dev-dependencies]
nanna-simd = { path = "../nanna-simd" }
tokio = { version = "1.43", features = ["full"] }
criterion = { version = "0.8", features = ["html_reports"] }