[package]
name = "nanna-llm"
version.workspace = true
edition.workspace = true

[features]
default = []
auto-refresh = ["nanna-config"]

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures = "0.3"
async-stream = "0.3"
directories = "5"

# Optional: for OAuth auto-refresh
nanna-config = { path = "../nanna-config", optional = true }
