[package]
name = "nanna-llm"
version.workspace = true
edition.workspace = true

[features]
default = ["tiktoken"]
auto-refresh = ["nanna-config"]
# Exact OpenAI BPE counts via tiktoken-rs (o200k_base / cl100k_base).
# The default heuristic remains always available and is used as a fallback.
tiktoken = ["dep:tiktoken-rs"]

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures = "0.3"
async-stream = "0.3"
directories = "6"

# Optional: for OAuth auto-refresh
nanna-config = { path = "../nanna-config", optional = true }

# Optional exact OpenAI token counting
tiktoken-rs = { version = "0.12", optional = true }
