[package]
name = "nanna-memory"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
half.workspace = true
uuid.workspace = true
async-trait.workspace = true

nanna-simd = { path = "../nanna-simd" }
nanna-gpu = { path = "../nanna-gpu" }
