[package]
name = "nanna-scripting"
version.workspace = true
edition.workspace = true
description = "JavaScript/TypeScript scripting engine for Nanna tools"

[features]
default = ["boa"]
boa = ["boa_engine", "boa_runtime"]
deno = ["deno_core", "deno_ast", "deno_error"]
python = ["rustpython-vm", "rustpython-stdlib", "rustpython-pylib"]
full = ["boa", "deno"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
url = "2"
walkdir = "2"
directories.workspace = true

# Boa - Pure Rust JS engine (lightweight)
boa_engine = { version = "0.21", optional = true }
boa_runtime = { version = "0.21", optional = true }

# Deno - V8-based (full featured fallback)
# NOTE: deno_core and boa_engine have conflicting ICU versions at latest - use one or the other
deno_core = { version = "0.375", optional = true }
deno_ast = { version = "0.51", features = ["transpiling"], optional = true }
deno_error = { version = "0.7", optional = true }

# TypeScript transpilation for Boa
swc_core = { version = "7", features = ["ecma_parser", "ecma_transforms", "ecma_codegen", "common"], optional = true }

# RustPython - Embedded Python interpreter (no system Python needed)
rustpython-vm = { version = "0.4", default-features = false, features = ["compiler", "encodings", "freeze-stdlib"], optional = true }
rustpython-stdlib = { version = "0.4", optional = true }
rustpython-pylib = { version = "0.4", features = ["freeze-stdlib"], optional = true }
