[package]
name = "nanna-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true

nanna-core = { path = "../nanna-core" }
nanna-agent = { path = "../nanna-agent" }
nanna-tools = { path = "../nanna-tools" }
nanna-storage = { path = "../nanna-storage" }
nanna-llm = { path = "../nanna-llm" }
nanna-channels = { path = "../nanna-channels" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "compression-gzip"] }

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Discord signature verification
ed25519-dalek = "3.0"
hex = "0.4"

# Slack signature verification
hmac = "0.13"
sha2 = "0.11"
serde_urlencoded = "0.7"
