[package]
name = "nanna-tools"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true

nanna-storage = { path = "../nanna-storage" }
nanna-simd = { path = "../nanna-simd" }

# For file operations
walkdir = "2"
glob = "0.3"

# For parallel execution
futures = "0.3"
