[package]
name = "nanna-tools"
version.workspace = true
edition.workspace = true

[features]
default = []
browser = ["nanna-browser"]
vision = ["nanna-llm"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true

nanna-storage = { path = "../nanna-storage" }
nanna-simd = { path = "../nanna-simd" }
nanna-browser = { path = "../nanna-browser", optional = true }
nanna-llm = { path = "../nanna-llm", optional = true }

# For file operations
walkdir = "2"
glob = "0.3"

# For parallel execution
futures = "0.3"

# For HTML extraction
scraper = "0.22"

# For audio encoding
base64-simd = "0.8"
