[package]
name = "nanna-tools"
version.workspace = true
edition.workspace = true

[features]
default = []
browser = ["nanna-browser"]
vision = ["nanna-llm"]
scripting = ["nanna-scripting"]
python = ["nanna-scripting/python"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
directories.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true

nanna-storage = { path = "../nanna-storage" }
nanna-simd = { path = "../nanna-simd" }
nanna-browser = { path = "../nanna-browser", optional = true }
nanna-llm = { path = "../nanna-llm", optional = true }

# For file operations
walkdir = "2"
glob = "0.3"

# For parallel execution
futures = "0.3"

# For HTML extraction
scraper = "0.27"

# For audio encoding
base64-simd = "0.8"

# For PDF parsing
lopdf = "0.44"

# Pure Rust OCR (ONNX models via RTen) — Tier 0 embedded OCR
# rten-imageproc is a transitive dep of ocrs (not used directly)
ocrs = "0.12"
rten = { version = "0.24", default-features = false, features = ["rten_format"] }

# Image processing (needed by ocrs for decoding input images)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }

# For skill manifests (tool.yaml)
serde_yaml = "0.9"

# For parameter substitution in commands
regex = "1"

# For scripted tools (optional)
nanna-scripting = { path = "../nanna-scripting", optional = true }

[dev-dependencies]
tempfile = "3"
