[package]
name = "nanna-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workspace management for Nanna - directory-based agent context"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
