[package]
name = "nanna-gui"
version.workspace = true
description = "Nanna AI Assistant - Desktop GUI"
authors = ["Nanna Team"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nanna_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# Async utilities
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Link to nanna crates for IPC
nanna-core = { path = "../../crates/nanna-core" }
nanna-llm = { path = "../../crates/nanna-llm" }
nanna-config = { path = "../../crates/nanna-config" }
nanna-storage = { path = "../../crates/nanna-storage" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
