[package]
name = "nanna-gui"
version.workspace = true
description = "Nanna AI Assistant - Desktop GUI"
authors = ["Nanna Team"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nanna_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-shell.workspace = true
tauri-plugin-notification = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# Async utilities
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for embeddings API
reqwest = { version = "0.12", features = ["json"] }

# TOML for config export/import
toml = "0.8"

# Link to nanna crates for IPC
nanna-core = { path = "../../crates/nanna-core" }
nanna-llm = { path = "../../crates/nanna-llm" }
nanna-config = { path = "../../crates/nanna-config" }
nanna-storage = { path = "../../crates/nanna-storage" }
nanna-tools = { path = "../../crates/nanna-tools" }
nanna-memory = { path = "../../crates/nanna-memory" }

[features]
default = ["custom-protocol", "devtools"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
