[package]
name = "nanna-gui"
version.workspace = true
description = "Nanna AI Assistant - Desktop GUI"
authors = ["Nanna Team"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nanna_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-shell.workspace = true
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# Async utilities (futures-util backs the WebSocket daemon client)
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket for daemon connection
tokio-tungstenite = "0.30"

# HTTP client for embeddings API
reqwest.workspace = true

# TOML for config export/import
toml = "1.1"

# YAML for skill manifests
serde_yaml = "0.9"

# PKCE OAuth flow
base64 = "0.22"
sha2 = "0.11"
urlencoding = "2.1"
rand = "0.10"


# Directories for fallback paths
directories.workspace = true

# Nanna crates the daemon *client* needs. The GUI is a pure daemon client, so it
# links only: nanna-config (config cache read/write + credential manager),
# nanna-core (cron parsing/description, workspace registry cache + folder
# constants, and the relocated log_buffer), and nanna-tools (workspace skills
# discovery). All heavy subsystems (storage, memory, agent loop, scheduler, LLM
# routing, channels) live in the daemon and are reached over IPC.
nanna-core = { path = "../../crates/nanna-core" }
nanna-config = { path = "../../crates/nanna-config" }
nanna-tools = { path = "../../crates/nanna-tools", features = ["scripting"] }

[features]
default = ["custom-protocol", "devtools"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[dev-dependencies]
tempfile = "3"
